testcases/neg/sem/bad_arith.tig
/* this is a /* nested */  comment */

"Hello" + 12 + "42"
